# webauthn-demo

webauthn-server/: README.md  pyproject.toml  sql_app.db
webauthn-server/migrations/versions/: 81445603f267_create_user_table.py
webauthn-server/tests/: test_webauthn_server.py
webauthn-server/webauthn_server/: main.py
webauthn-server/webauthn_server/adapters/endpoints/api_fastapi/: __init__.py
webauthn-server/webauthn_server/adapters/endpoints/api_fastapi/controllers/: user_controller.py
webauthn-server/webauthn_server/adapters/endpoints/rest_fastapi/: __init__.py
webauthn-server/webauthn_server/adapters/gateway/sql_alchemy/: database.py
webauthn-server/webauthn_server/adapters/gateway/sql_alchemy/models/: User.py
webauthn-server/webauthn_server/adapters/gateway/sql_alchemy/repository/: readwrite_repository.py  user_repository.py
webauthn-server/webauthn_server/business_rules/exceptions/: user_exceptions.py
webauthn-server/webauthn_server/business_rules/use_cases/: user_use_case.py
webauthn-server/webauthn_server/entities/: crud_repository.py
webauthn-server/webauthn_server/entities/user/: repository.py  schema.py
