[tool.poetry]
name = "webauthn-server"
version = "0.1.0"
description = ""
authors = ["Paulo Rodrigues <paulorodriguesxv@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = {extras = ["all"], version = "^0.73.0"}
SQLAlchemy = {extras = ["asyncio"], version = "^1.4.31"}
injector = "^0.19.0"
alembic = "^1.7.5"
aiosqlite = "^0.17.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
